# Linkup-MCP-Company-Research

./: .gitignore  Procfile  README.md  main.py  prompts.csv  pyproject.toml  railway.json  requirements.txt
docs/: index.html
src/linkup_company_research/: __init__.py  prompts.py  remote.py  schemas.py  server.py  types.py
