[project]
name = "linkup-company-research-mcp"
version = "0.2.0"
description = "Company research MCP server powered by Linkup - 10 research tools with dual output formats (natural language or structured JSON), full parameter control, and optimized prompts for comprehensive company intelligence."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Linkup", email = "support@linkup.so" }]
keywords = ["mcp", "linkup", "company-research", "ai", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
linkup-company-research = "linkup_company_research.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkup_company_research"]
