[project]
name = "linkup-company-research-mcp"
version = "0.3.1"
description = "Company research MCP server powered by Linkup - 17 research tools covering company overview, products, business model, financials, funding, leadership, culture, clients, partnerships, technology, competition, market, news, strategy, risks, and ESG."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Linkup", email = "support@linkup.so" }]
keywords = ["mcp", "linkup", "company-research", "ai", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
remote = [
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
linkup-company-research = "linkup_company_research.server:main"
linkup-company-research-remote = "linkup_company_research.remote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkup_company_research"]
